replaced ESM1b model until bug addressed

--- a/docs/data_importation_and_representation.ipynb
+++ b/docs/data_importation_and_representation.ipynb
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "fig = pg.benchmark_models(metric = \"AUC\", \n",
-    "    models = [\"GEMME\", \"CARP_600K\", \"ESM1b\", \"VESPA\", \"ProtGPT2\"])\n",
+    "    models = [\"GEMME\", \"CARP_600K\", \"EVmutation\", \"VESPA\", \"ProtGPT2\"])\n",
     "plt.show()"
    ]
   },
