renamed all zero-shot and supervisded func for consistency with ProteinGymR.
`get_supervised_scores_data()` -> `get_supervised_substitution_data()` # Load supervised model predictions for substitutions
`get_supervised_model_list()` -> `available_supervised_models()` # Get list of supervised models available in ProteinGym
`_load_supervised_summary_metrics()` -> `get_supervised_metrics()` # Load supervised performance metrics

`get_zero_shot_scores_data()` -> `get_zero_shot_substitution_data()` # Load zero-shot model predictions for DMS substitutions
`get_zero_shot_model_list()` -> `available_zero_shot_models()` # Get list of zero-shot models available in ProteinGym
`get_zero_shot_summary_stats()` -> `get_zero_shot_metrics()` # Load zero-shot performance metrics

--- a/docs/data_importation_and_representation.ipynb
+++ b/docs/data_importation_and_representation.ipynb
@@ -101,14 +101,14 @@
     "    `get_zero_shot_benchmark_data()`.\n",
     "\n",
     "5.  Model scores on the DMS substitutions for 79 models in the zero-shot\n",
-    "    setting. Load with `get_zero_shot_scores_data()`.\n",
+    "    setting. Load with `get_zero_shot_substitution_data()`.\n",
     "\n",
     "6.  Two model performance metrics (\"Spearman\", and \"MSE\") for 12 models across\n",
-    "    217 assays calculated on DMS substitutions in a semi-supervised setting. Load in this data with `_load_supervised_summary_metrics()`.\n",
+    "    217 assays calculated on DMS substitutions in a semi-supervised setting. Load in this data with `get_supervised_metrics()`.\n",
     "\n",
-    "7.  Model scores on the DMS substitutions for 11 semi-supervised models with 3\n",
+    "7.  Model scores on the DMS substitutions for 12 semi-supervised models with 3\n",
     "    folding schemes: contiguous, modulo, and random. Loaded in with\n",
-    "    `get_supervised_scores_data()` and by changing the \"fold_scheme\" argument,\n",
+    "    `get_supervised_substitution_data()` and by changing the \"fold_scheme\" argument,\n",
     "    respectively.\n",
     "\n",
     "8.  PDB files for 197 protein structures, to be used in the `plot_structure()`\n",
