ignore `get_zero_shot_summary_stats` which is just random table summary func that isn't useful. This was accidentally renamed `get_zero_shot_metrics` in preview commit. Should not be.

--- a/docs/data_importation_and_representation.ipynb
+++ b/docs/data_importation_and_representation.ipynb
@@ -98,7 +98,7 @@
     "4.  Five model performance metrics (\"AUC\", \"MCC\", \"NDCG\", \"Spearman\",\n",
     "    \"Top_recall\") for 79 models across 217 assays calculated on DMS\n",
     "    substitutions in a zero-shot setting. The data can be obtained with\n",
-    "    `get_zero_shot_benchmark_data()`.\n",
+    "    `get_zero_shot_metrics()`.\n",
     "\n",
     "5.  Model scores on the DMS substitutions for 79 models in the zero-shot\n",
     "    setting. Load with `get_zero_shot_substitution_data()`.\n",
