minor edit to visualization notebook, made notes about addtional scripting more explicit

--- a/docs/visualization_exploration.ipynb
+++ b/docs/visualization_exploration.ipynb
@@ -288,12 +288,12 @@
     "\n",
     "**Note:** The following cells require addtional dependencies. Install with: `pip install proteingympy[visualization]` or `uv sync --extra visualization`\n",
     "\n",
-    "**Note:** Some of these cells have addtional scripting to build static demos of the 3D viewer. These are not part of the package."
+    "**Note:** Some of these cells have addtional scripting to build static demos of the 3D viewer. These are not part of the package and are soley for the purpose of making the documentation. `plot_structure` function by itself should return the interactive 3D model when run in an jupyter notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -323,20 +323,22 @@
    ],
    "source": [
     "from proteingympy.plot_structure import plot_structure\n",
-    "from IPython.display import display, Markdown, IFrame\n",
+    "from IPython.display import display, IFrame\n",
     "\n",
+    "# `export_html` is an optional argument that will save the interactive structure to an HTML file\n",
     "view, fig = plot_structure(\n",
     "    assay_name=\"ACE2_HUMAN_Chan_2020\",\n",
     "    export_html=\"ace2_structure.html\"\n",
     ")\n",
     "\n",
-    "# Display the colorbar\n",
+    "####SCRIPTING FOR READ THE DOCS####\n",
+    "# Display just the color bar\n",
     "display(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +364,8 @@
     }
    ],
    "source": [
+    "####SCRIPTING FOR READ THE DOCS####\n",
+    "# Display the interactive structure from the saved HTML file in iframe\n",
     "display(IFrame(src='../assets/ace2_structure.html', width='100%', height='350ppx'))"
    ]
   },
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,12 +422,14 @@
     "    aggregate_fun=np.min,\n",
     "    export_html=\"C6KNH7_structure.html\"  # This exports to HTML\n",
     ")\n",
+    "####SCRIPTING FOR READ THE DOCS####\n",
+    "# Display just the color bar\n",
     "display(min_fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6486,6 +6492,8 @@
     }
    ],
    "source": [
+    "####SCRIPTING FOR READ THE DOCS####\n",
+    "# Display interactive structure with direct HTML display \n",
     "from IPython.display import HTML\n",
     "HTML(\"C6KNH7_structure.html\")"
    ]
