Comments from ludwig: - elain in the list of authors in notebooks - sync installation instructions on github and readthedocs

--- a/docs/visualization_exploration.ipynb
+++ b/docs/visualization_exploration.ipynb
@@ -11,6 +11,7 @@
     "- Tram Nguyen, Department of Biomedical Informatics, Harvard Medical School (Tram_Nguyen@hms.harvard.edu)\n",
     "- Pascal Notin, Department of Systems Biology, Harvard Medical School\n",
     "- Aaron W Kollasch, Department of Systems Biology, Harvard Medical School\n",
+    "- Yilan Wang, Department of Systems Biology, Harvard Medical School \n",
     "- Debora Marks, Department of Systems Biology, Harvard Medical School\n",
     "- Ludwig Geistlinger, Department of Biomedical Informatics, Harvard Medical School\n",
     "\n",
