fixed dms_corr_plot paragraph

--- a/docs/visualization_exploration.ipynb
+++ b/docs/visualization_exploration.ipynb
@@ -6519,7 +6519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6561,18 +6561,18 @@
    ],
    "source": [
     "# Correlate DMS scores with AlphaMissense predictions\n",
-    "from proteingympy.model_corr_plot import model_corr_plot\n",
+    "from proteingympy.dms_corr_plot import dms_corr_plot\n",
     "\n",
-    "corr_plot = model_corr_plot(uniprot_id=\"Q9NV35\")\n"
+    "corr_plot = dms_corr_plot(uniprot_id=\"Q9NV35\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the `model_corr_plot()` function gathers any of the 217 DMS assays of the chosen UniProt ID and correlates the average DMS score across relevant assays and the AlphaMissense model predictions.\n",
+    "By default, the `dms_corr_plot()` function gathers any of the 217 DMS assays of the chosen UniProt ID and correlates the average DMS score across relevant assays and the AlphaMissense model predictions.\n",
     "\n",
-    "Although the default uses the AlphaMissense scores, it is simple to correlate DMS experimental scores with predictions from any of the 79 zero-shot or supervised models."
+    "Although the default uses the AlphaMissense scores, it is simple to correlate DMS experimental scores with predictions from any of the 79 zero-shot or supervised models by specifying the chosen model with the argument `model`."
    ]
   },
   {
@@ -6581,7 +6581,7 @@
    "source": [
     "## Correlate prediction scores between two models\n",
     "\n",
-    "Similar to the above, we can also explore the correlation between two different models for a given protein instead of looking at the DMS experimental data. We can do this for the protein \"P04637\" and the `model_corr_plot()` function. By default, the function only requires a UniProt ID, and uses \"AlphaMissense\" and \"EVE_single\" models as defaults. Let's change that to \"Kermut\" and \"ProteinNPT\" for our demonstration."
+    "Similar to the above, we can also explore the correlation between two different models for a given protein instead of looking at the DMS experimental data. We can do this for the protein \"P04637\" and the `model_corr_plot()` function. By default, the function only requires a UniProt ID, and uses \"AlphaMissense\" and \"GEMME\" models as defaults. Let's change that to `model1` = \"Kermut\" and `model2` = \"ProteinNPT\" in our function arguments for our demonstration."
    ]
   },
   {
